--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # SharePoint credentials
 SHAREPOINT_SITE_URL=https://dscloud-my.sharepoint.com/:x:/r/personal/mark_szeibert_sallinggroup_com
-SHAREPOINT_FILE_URL=/Documents/DailyPlan/Plan.xlsm
+SHAREPOINT_FILE_URL=/personal/mark_szeibert_sallinggroup_com/_layouts/15/Doc.aspx?sourcedoc=%7BCDFED9AA-740D-471F-9996-2C96B4B10A65%7D&file=Plan.xlsm
 SHAREPOINT_USERNAME=your_username
 SHAREPOINT_PASSWORD=9002602
