--- a/requirements.txt
+++ b/requirements.txt
@@ -125,3 +125,5 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
+torch==2.5.1
+tinycss2==1.4.0  # Or specify a version that works with your Python version
