--- a/requirements.txt
+++ b/requirements.txt
@@ -127,3 +127,4 @@ websocket-client==1.8.0
 Werkzeug==3.1.3
 torch==2.5.1
 tinycss2==1.4.0  # Or specify a version that works with your Python version
+office365==2.0.10
