--- a/requirements.txt
+++ b/requirements.txt
@@ -128,3 +128,6 @@ Werkzeug==3.1.3
 torch==2.5.1
 tinycss2==1.4.0  # Or specify a version that works with your Python version
 office365-rest-python-client
+openpyxl
+excel2img
+msal
