--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,9 @@ attrs==24.2.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
-blinker==1.9.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
-click==8.1.8
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.1
@@ -23,7 +21,6 @@ defusedxml==0.7.1
 executing==2.1.0
 fastjsonschema==2.21.1
 filelock==3.13.1
-Flask==3.1.0
 fonttools==4.55.3
 fqdn==1.5.1
 fsspec==2024.2.0
@@ -36,7 +33,6 @@ idna==3.10
 ipykernel==6.29.5
 ipython==8.30.0
 isoduration==20.11.0
-itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.4
 joblib==1.4.2
@@ -76,6 +72,7 @@ pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.0.0
+pipdeptree==2.24.0
 platformdirs==4.3.6
 plotly==5.24.1
 prometheus_client==0.21.1
@@ -87,7 +84,6 @@ pycparser==2.22
 Pygments==2.18.0
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
 python-json-logger==3.2.0
 pytz==2024.2
 PyYAML==6.0.2
@@ -112,7 +108,7 @@ tenacity==9.0.0
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
-torch==2.5.1
+torch==2.5.1+cpu
 tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
@@ -124,10 +120,3 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
-Werkzeug==3.1.3
-torch==2.5.1
-tinycss2==1.4.0  # Or specify a version that works with your Python version
-office365-rest-python-client
-openpyxl
-excel2img
-msal
