--- a/requirements.txt
+++ b/requirements.txt
@@ -122,6 +122,6 @@ webencodings==0.5.1
 websocket-client==1.8.0
 gunicorn==20.1.0
 flask==2.1.3
-python-dotenv==1.0.0
-werkzeug==2.1.3
+python-dotenv>=1.0.0,<2.0
+werkzeug>=2.1.3,<3.0
 excel2img
