--- a/requirements.txt
+++ b/requirements.txt
@@ -121,6 +121,9 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 gunicorn==20.1.0
-flask==2.1.3
+flask==2.2.2
 python-dotenv>=1.0.0,<2.0
 werkzeug>=2.1.3,<3.0
+office365-rest-python-client==2.3.7
+openpyxl==3.0.10
+python-dotenv==0.21.1
