--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # SharePoint credentials
-SHAREPOINT_SITE_URL=https://dscloud-my.sharepoint.com/:x:/r/personal/mark_szeibert_sallinggroup_com
-SHAREPOINT_FILE_URL=/personal/mark_szeibert_sallinggroup_com/_layouts/15/Doc.aspx?sourcedoc=%7BCDFED9AA-740D-471F-9996-2C96B4B10A65%7D&file=Plan.xlsm
-SHAREPOINT_USERNAME=""
-SHAREPOINT_PASSWORD=""
+SHAREPOINT_SITE_URL=https://dscloud-my.sharepoint.com/:x:/r/personal/mark_szeibert_sallinggroup_com/
+SHAREPOINT_FILE_URL=/r/personal/mark_szeibert_sallinggroup_com/Documents/Daily%20plan%20website/Plan.xlsm?
+SHAREPOINT_USERNAME="mark.szeibert@sallinggroup.com"
+SHAREPOINT_PASSWORD="Cildrenmek2"
