--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # SharePoint credentials
-SHAREPOINT_SITE_URL=https://dscloud-my.sharepoint.com/:x:/r/personal/mark_szeibert_sallinggroup_com/
-SHAREPOINT_FILE_URL=/r/personal/mark_szeibert_sallinggroup_com/Documents/Daily%20plan%20website/Plan.xlsm?
+SHAREPOINT_SITE_URL=https://dscloud-my.sharepoint.com/:x:/r/personal/mark_szeibert_sallinggroup_com/Documents/Daily%20plan%20website/Plan.xlsm
+SHAREPOINT_FILE_URL=/personal/mark_szeibert_sallinggroup_com/Documents/Daily%20plan%20website/Plan.xlsm?
 SHAREPOINT_USERNAME="mark.szeibert@sallinggroup.com"
 SHAREPOINT_PASSWORD="Cildrenmek2"
