--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 SHAREPOINT_SITE_URL=https://dscloud-my.sharepoint.com/:x:/r/personal/mark_szeibert_sallinggroup_com/Documents/Daily%20plan%20website/Plan.xlsm
 SHAREPOINT_FILE_URL=/personal/mark_szeibert_sallinggroup_com/Documents/Daily%20plan%20website/Plan.xlsm?
 SHAREPOINT_USERNAME="mark.szeibert@sallinggroup.com"
-SHAREPOINT_PASSWORD="Cildrenmek2"
+SHAREPOINT_PASSWORD=""
